static/style.css
/* ... */
.todolist-input-wrapper {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 10px;
}

.todolist-search-wrapper {
    display: flex;
    flex-direction: row;
    border-radius: 3px;
    background: #fff;
    align-items: center;
    padding: 0px 15px;
    margin-bottom: 10px;
    margin-top: 10px;
    height: 30px;
    min-height: 30px;
    max-height: 30px;
    border: 1px solid rgba(34, 60, 80, 0.18);
}

#search-input {
    width: 100%;
    height: 20px;
    border: none;
    color: rgba(0, 0, 0, 1);
    font-family: "Ubuntu Mono";
    font-size: 14px;
    font-style: normal;
    font-variant: normal;
    text-align: center;
}

#task-input {
	width: 100%;
	color: rgba(0, 0, 0, 1);
	font-family: "Ubuntu Mono";
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	text-align: center;
	resize: none;
	border-radius: 3px;
	background: #fff;
	align-items: center;
	padding: 5px 15px;
	height: auto;
	border: 1px solid rgba(34, 60, 80, 0.18);
}

#search-input::placeholder,
#task-input::placeholder,
#task-group::placeholder {
    color: rgba(0, 0, 0, 0.8);
}

#search-input:focus,
#task-input:focus {
    outline: none;
}

.todolist-body {
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: space-between;
}

.todolist-todo-column,
.todolist-doing-column,
.todolist-done-column {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: calc(100% / 3.1);
    border-radius: 3px;
    border: 1px solid rgba(34, 60, 80, 0.18);
    background: #fff;
}

.todolist-todo-column-title,
.todolist-doing-column-title,
.todolist-done-column-title {
    width: 100px;
    display: flex;
    justify-content: center;
    margin: 8px;
    font-size: 18px;
    font-style: normal;
    font-variant: normal;
    background: rgba(0, 0, 0, 0.05);
    border-radius: 3px;
}

.todolist-todo-column-body,
.todolist-doing-column-body,
.todolist-done-column-body {
    display: flex;
    width: 100%;
    max-height: calc(100vh - 217px);
    height: calc(100vh - 217px);
    overflow-y: scroll;
    flex-direction: column;
    
}

* {
    scrollbar-width: auto;
    scrollbar-color:  rgba(0,0,0,0.2) #ffffff;
}
*::-webkit-scrollbar {
    width: 16px;
}
*::-webkit-scrollbar-track {
    background: #ffffff;
}
*::-webkit-scrollbar-thumb {
    background-color: rgba(0,0,0,0.2);
    border-radius: 10px;
    border: 3px solid #ffffff;
}
  
#task-group {
	height: 23px;
	width: 100%;
	color: rgba(0, 0, 0, 1);
	font-family: "Ubuntu Mono";
	font-size: 14px;
	font-style: normal;
	font-variant: normal;
	text-align: center;
	border-radius: 3px;
	background: #fff;
	border: 1px solid rgba(34, 60, 80, 0.18);
    margin-right: 10px;
}

#task-group:focus {
    outline: none;
}

.send-task-button {
	cursor: pointer;
	border: 1px solid rgba(34, 60, 80, 0.18);
	border-radius: 3px;
	background: #fff;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 3.5px 5px 3.5px 5px;
    color: rgba(0, 0, 0, 0.5);
}

.send-task-button img {
    margin-right: 10px;
}

.send-task-button:hover {
    background: #009688;
    color: #fff;
}

.send-task-button:hover img {
    filter: brightness(0) 
            saturate(100%) 
            invert(87%) 
            sepia(88%) 
            saturate(1%) 
            hue-rotate(265deg) 
            brightness(111%) 
            contrast(97%);
}

.task-element {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 10px;
    margin-bottom: 10px;
    margin-left: 10px;
    margin-right: 12px;
    margin-top: 5px;
    border-radius: 3px;
    background: #fff;
    border: 1px solid rgba(34, 60, 80, 0.18);
}

.task-element-text {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.task-element-text-info {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-weight: bold;
    margin-bottom: 5px;
    background: rgba(0, 0, 0, 0.1);
    border-radius: 3px;
    padding: 0px 10px;
    cursor: move;
}

.task-element-id {
    color: rgba(0, 0, 0, 0.5);
}

.task-element-text-todo {
    text-align: justify;
    max-height: 45px;
    overflow: hidden;
}

.task-element-options {
    display: flex;
    flex-direction: column;
    height: 100%;
    margin-left: 10px;
}

.task-element-options img {
    cursor: pointer;
    width: 15px;
    height: 15px;
}

.task-element-edit img {
    filter: brightness(0) 
            saturate(100%) 
            invert(0%) 
            sepia(100%) 
            saturate(27%) 
            hue-rotate(263deg) 
            brightness(102%) 
            contrast(102%);
    opacity: 0.5;
}

.todolist-create-button {
    display: flex;
    border-radius: 50%;
    position: absolute;
    bottom: 15px;
    right: 15px;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    background-color: #009688;
    width: 50px;
    height: 50px;
    transition: 0.2s ease-out;
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 
                0 1px 5px 0 rgba(0, 0, 0, 0.12), 
                0 3px 1px -2px rgba(0, 0, 0, 0.2);
}

.todolist-create-button:hover {
    background-color: #4db6ac;
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 
                0 1px 7px 0 rgba(0, 0, 0, 0.12), 
                0 3px 1px -1px rgba(0, 0, 0, 0.2);
}

.todolist-create-button img {
    width: 25px;
    height: 25px;
}

.todolist-create-task-modal ,
.todolist-edit-task-modal {
    display: flex;
    flex-direction: column;
}

.todolist-task-editor,
.ql-toolbar {
    border: 1px solid rgba(34, 60, 80, 0.18) !important;
    border-radius: 3px;
}

.todolist-task-editor {
    height: 100%;
    overflow-y: scroll;
}
/* ... */

